# Numcore_messaging_library

./: .gitignore  .gitmodules  CMakeLists.txt  Numcore_messaging_library.vcxproj  Numcore_messaging_library.vcxproj.filters  README.txt
.github/workflows/: cmake-single-platform.yml
messaging/claim/: AttributeMessage.cpp  AttributeMessage.h  MessageStreaming.cpp  MessageStreaming.h  PostOffice.cpp  PostOffice.h  PostOfficeInitializer.cpp  PostOfficeInitializer.h  ThroughputStatistics.h
messaging/num0w/: config.h  num0w_postoffice.cpp  num0w_postoffice.h
messaging/num0w/Broker/: Broker.cpp  Broker.vcxproj
messaging/numrabw/: LimitedSizeBuffer.h  numrabw_postoffice.cpp  numrabw_postoffice.h
messaging/numrabw/rabbitmq-build-vs/: RabbitMQ.vcxproj  RabbitMQ.vcxproj.filters
messaging/numsprew/: numsprew_postoffice.cpp  numsprew_postoffice.h  signaling_select.cpp  signaling_select.h
messaging/slaim/: buffer.h  bufferitem.h  errorlog.h  message.h  messaging.cpp  postoffice.h  postoffice_extended.h
numcfc/: IdGenerator.cpp  IdGenerator.h  IniFile.cpp  IniFile.h  Logger.cpp  Logger.h  StringBuilder.h  ThreadRunner.cpp  ThreadRunner.h  Time.cpp  Time.h
python/: claim.py  numsprew.py  slaim.py  test.py  unittests.py
samples/: CMakeLists.txt  Numcore_messaging_library.vcproj  Numcore_messaging_library.vcxproj  Numcore_messaging_library.vcxproj.filters  samples.sln
samples/disk-space-logger/: disk-space-logger.cpp  disk-space-logger.vcxproj  disk-space-logger.vcxproj.filters
samples/influx-writer/: influx-writer.cpp  influx-writer.vcxproj  influx-writer.vcxproj.filters
samples/producer-consumer/: producer-consumer.cpp  producer-consumer.vcproj  producer-consumer.vcxproj
